<resources>
    <string name="app_name">Chen_Chiang</string>
    <string name="loading">Loading Data</string>
    <string-array name="continents">
        <item>Africa</item>
        <item>Americas</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>Oceania</item>
    </string-array>
    <string name="lblName">Name:</string>
    <string name="lblCapital">Capital:</string>
    <string name="lblRegion">Region:</string>
    <string name="lblPopulation">Population:</string>
    <string name="lblArea">Area:</string>
    <string name="lblBorder">Borders:</string>

</resources>
